# audio-transcriber

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  rename_songs.py
docs/: ARCHITECTURE.md
scripts/: batch_transcribe.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_checkpoint_halt.py  test_chunker_reassembler.py  test_config.py  test_diarization.py  test_exporters.py  test_faster_whisper_model.py  test_main.py  test_protocols.py  test_service.py
transcriber/: __init__.py  config.py  logging_setup.py  main.py  protocols.py
transcriber/audio/: aligner.py  checkpoint.py  chunker.py  diarizer.py  halt.py  normalizer.py  reassembler.py
transcriber/models/: faster_whisper_model.py
transcriber/output/: exporters.py
transcriber/transcription/: result_serialization.py  service.py  stage_checkpoint.py
