[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "audio-transcriber"
version = "1.1.0"
description = "Spanish audio transcription + speaker diarization with SOLID/clean architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# ── Core runtime dependencies (CPU transcription only) ────────────────────────
# NOTE: torch is NOT listed here deliberately.
# faster-whisper uses CTranslate2 which does NOT require torch.
# Installing the default torch wheel pulls in CUDA NPP libraries (libnppicc.so)
# that crash on CPU-only machines. Install torch manually — see README.
dependencies = [
    "faster-whisper>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "pydub>=0.25.1",
    "pyannote.audio>=3.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
transcribe = "transcriber.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=transcriber --cov-report=term-missing -v"
markers = [
    "integration: requires model download and real audio",
]
